Add Google site verification meta tag
Inserted a Google site verification meta tag in base.html to enable site ownership verification for Google services.

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <meta name="description" content="{% block meta_description %}Ne perdez plus de temps à chercher. Trouvez les meilleurs jeux vidéo selon votre budget, votre temps de jeu et vos plateformes (PC, PS5, Switch, Xbox).{% endblock %}">
     <meta name="author" content="Clément Lazzarini">
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
+    <meta name="google-site-verification" content="_TRGAtDzQ2zdo3q8Lq22KbU5DZiLynBf8p_ZNrB0RYU" />
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://whichgame.pythonanywhere.com/"> <meta property="og:title" content="WhichGame - Le comparateur de jeux malin">
